--- a/heyFam/Views/Base.lproj/Main.storyboard
+++ b/heyFam/Views/Base.lproj/Main.storyboard
@@ -257,6 +257,13 @@
                                     <action selector="logIn:" destination="4ZV-JD-6zI" eventType="touchUpInside" id="CTs-F7-1dB"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Error Messages" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="udo-oY-Lqb">
+                                <rect key="frame" x="127" y="214" width="120" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -280,7 +287,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S6S-Nx-gld" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1209" y="385"/>
+            <point key="canvasLocation" x="1208.8" y="384.55772113943033"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Zcu-pD-oG2">
@@ -302,6 +309,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="EtK-UI-eTP"/>
+        <segue reference="1ag-dr-Mny"/>
     </inferredMetricsTieBreakers>
 </document>
