Added id to users, created ChatLogVC

--- a/heyFam/Views/Base.lproj/Main.storyboard
+++ b/heyFam/Views/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="messageCell" id="3un-Ne-i66">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="threadCell" id="3un-Ne-i66">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3un-Ne-i66" id="lsB-gH-U21">
@@ -48,6 +48,7 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <segue destination="1gB-Hi-CFH" kind="presentation" identifier="signOutSegue" id="40m-Ui-uZa"/>
+                        <segue destination="fm0-Vc-YL4" kind="show" identifier="showChatlLog" id="SsY-Lf-I8N"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yHQ-hq-myu" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -256,7 +257,89 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ofY-Es-aWl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1513" y="319"/>
+            <point key="canvasLocation" x="1513" y="300"/>
+        </scene>
+        <!--Chat Log View Controller-->
+        <scene sceneID="RsE-Ah-WIZ">
+            <objects>
+                <viewController id="fm0-Vc-YL4" customClass="ChatLogViewController" customModule="heyFam" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bnk-cg-bW7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q8R-KB-wlL">
+                                <rect key="frame" x="0.0" y="627" width="375" height="40"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yNG-3z-V15" userLabel="Separator View">
+                                        <rect key="frame" x="4" y="0.0" width="367" height="1"/>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1" id="5bs-ey-0Nj"/>
+                                        </constraints>
+                                    </view>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1jz-Cr-IDn">
+                                        <rect key="frame" x="330" y="5" width="37" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                        <state key="normal" title="Send"/>
+                                    </button>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type here..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="T9B-hm-vyG">
+                                        <rect key="frame" x="8" y="6" width="314" height="29"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="1jz-Cr-IDn" firstAttribute="leading" secondItem="T9B-hm-vyG" secondAttribute="trailing" constant="8" id="3Pi-Kk-Tev"/>
+                                    <constraint firstItem="1jz-Cr-IDn" firstAttribute="centerY" secondItem="q8R-KB-wlL" secondAttribute="centerY" id="3qA-TQ-PvB"/>
+                                    <constraint firstAttribute="trailing" secondItem="1jz-Cr-IDn" secondAttribute="trailing" constant="8" id="8MY-QQ-Bcq"/>
+                                    <constraint firstItem="T9B-hm-vyG" firstAttribute="top" secondItem="yNG-3z-V15" secondAttribute="bottom" constant="5" id="9XD-Gd-O3E"/>
+                                    <constraint firstItem="yNG-3z-V15" firstAttribute="leading" secondItem="q8R-KB-wlL" secondAttribute="leading" constant="4" id="LCk-e2-6l7"/>
+                                    <constraint firstItem="yNG-3z-V15" firstAttribute="top" secondItem="q8R-KB-wlL" secondAttribute="top" id="QdD-Jn-wDJ"/>
+                                    <constraint firstAttribute="trailing" secondItem="yNG-3z-V15" secondAttribute="trailing" constant="4" id="b9F-Ex-iDB"/>
+                                    <constraint firstAttribute="bottom" secondItem="T9B-hm-vyG" secondAttribute="bottom" constant="5" id="dZ1-qJ-eJ4"/>
+                                    <constraint firstAttribute="height" constant="40" id="f7d-hx-Awu"/>
+                                    <constraint firstItem="T9B-hm-vyG" firstAttribute="leading" secondItem="q8R-KB-wlL" secondAttribute="leading" constant="8" id="gLW-Zl-cBz"/>
+                                </constraints>
+                            </view>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="wCQ-jY-llB">
+                                <rect key="frame" x="0.0" y="64" width="375" height="563"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="PCq-iG-2gQ">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="messageCell" id="ftE-bG-psT">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="3I7-lC-EZq" firstAttribute="bottom" secondItem="q8R-KB-wlL" secondAttribute="bottom" id="6di-1B-WLx"/>
+                            <constraint firstItem="wCQ-jY-llB" firstAttribute="leading" secondItem="3I7-lC-EZq" secondAttribute="leading" id="fRh-vd-hsW"/>
+                            <constraint firstItem="q8R-KB-wlL" firstAttribute="top" secondItem="wCQ-jY-llB" secondAttribute="bottom" id="fa4-Qc-qic"/>
+                            <constraint firstItem="wCQ-jY-llB" firstAttribute="top" secondItem="3I7-lC-EZq" secondAttribute="top" id="jC5-cx-bOS"/>
+                            <constraint firstItem="3I7-lC-EZq" firstAttribute="trailing" secondItem="q8R-KB-wlL" secondAttribute="trailing" id="kWV-Ya-CGy"/>
+                            <constraint firstItem="q8R-KB-wlL" firstAttribute="leading" secondItem="3I7-lC-EZq" secondAttribute="leading" id="w0Q-fr-hzW"/>
+                            <constraint firstItem="3I7-lC-EZq" firstAttribute="trailing" secondItem="wCQ-jY-llB" secondAttribute="trailing" id="zi8-Hb-TNj"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="3I7-lC-EZq"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lfG-NY-CCV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2244" y="300"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Wg1-VG-DcO">
